2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Added default parameter values for registry-based configuration
	storage in 'src/common/config.cpp'.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Added icons.
2016-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'link_common.sh' that broke the build on MingW32.
2016-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/common/streamplayer.cpp' to use the server hostname
	value from the configuration.
2016-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/common/streamplayer_mme.cpp' to use the audio
	device value from the configuration.
2016-12-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'rdadminb.exe' to the 'make install-win32' target.
2017-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Moved 'src/rdlibraryb/librarymodel.cpp' and
	'src/rdlibraryb/librarymodel.h' to 'src/common/'.
2017-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added rdlogeditb(1) in 'src/rdlogeditb/'.
2017-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bugs that broke the build under MinGW32.
2017-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Edit Log' dialog in 'src/rdlogeditb/editlogdialog.cpp'
	and 'src/rdlogeditb/editlogdialog.h'.
2017-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Added audio play and stop buttons to the Edit Log dialog.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a test for MingW32 in 'configure.ac'.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a check of stream state in the 'StreamPlayer::stop()' method.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/rdlogeditb/editdialog.cpp' that caused
	previous selection state to be retained into the next exec() session.
2017-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Implemented header controls in the Edit Log Dialog.
	* Added a Date Picker Dialog in 'src/rdlogeditb/datedialog.cpp'
	and 'src/rdlogeditb/datedialog.h'.